# SubNet

./: .gitignore  README.md
CSubNet/: .gitignore  CMakeLists.txt  README.md
CSubNet/cl/: expandMultMatrix.cl  transExpandMultMatrix.cl  transMultMatrix.cl
CSubNet/src/: clUtils.c  clUtils.h  coreDefs.h  csv.c  csv.h  main.c  matrix.c  matrix.h  neuralLayer.c  neuralLayer.h  neuralNetwork.c  neuralNetwork.h  trainingData.c  trainingData.h  utils.c  utils.h  vector.c  vector.h
CSubNet/src/cl/: clMatrix.c  clMatrix.h  clUtils.c
ScalaSubNet/src/me/abarrow/ScalaSubNet/: ASSParser.scala  CSV.scala  CSubNet.scala  MKVToolNix.scala  QualifiedWord.scala  ScalaSubNet.scala  SubtitleTrack.scala  VideoCSVSpec.scala  VideoEstimator.scala  VideoUtils.scala  WordContext.scala
ScalaSubNet/src/me/abarrow/ScalaSubNet/mal/: MALCSVSpec.scala  MALEntry.scala  MALIDs.scala  MALImage.scala  MALList.scala  MALStats.scala  MALURLs.scala
ScalaSubNet/src/me/abarrow/ScalaSubNet/markov/: MarkovChain.scala  MarkovNode.scala
ScalaSubNet/src/me/abarrow/ScalaSubNet/utils/: FileUtils.scala  StringUtils.scala
data/wordlists/: adjectives.txt  adverbs.txt  anime_slang.txt  auxiliary_verbs.txt  conjunctions.txt  interjections.txt  nouns.txt  prepositions.txt  pro_sentences.txt  pronouns.txt  slang.txt  verbs.txt
design/: idea.txt  matrix multiplication performance.xlsx
